# llm-dit-experiments

./: .gitignore  CHANGELOG.md  CLAUDE.md  GUIDING_PRINCIPLES.md  README.md  SESSION_CONTINUITY.md  config.example.toml  config.toml.example  pyproject.toml  pytest.ini
docs/: distributed_inference.md  experiments_guide.md  heylookitsanllm_hidden_states_spec.md  profiler.md  qwen_image_guide.md  web_server_api.md
docs/guides/: distributed.md  lora.md  prompt_rewriting.md  vl_conditioning.md
docs/models/: qwen_image_edit.md  qwen_image_edit_2511.md  qwen_image_edit_2511_prompting.md  qwen_image_edit_2511_testing.md  qwen_image_layered.md  z_image.md
docs/reference/: api_endpoints.md  chat_templates.md  cli_flags.md  configuration.md  documentation_checklist.md  dype.md  long_prompts.md  resolution.md
docs/reports/: 2025-12-01_end_of_day.md
docs/research/: decoupled_dmd_training_report.md  z_image_attention_mask_filtering_design.md  z_image_diffsynth_analysis_20251201.md  z_image_model_analysis_20251201.md
experiments/: EMBEDDING_DIMENSION_ANALYSIS.md  QUICKSTART_DIMENSION_ANALYSIS.md  README.md  __init__.py  analyze_embedding_perdim.py  analyze_layer_dimensions.py  analyze_layers.py  analyze_thinking_dimensions.py  attention_backend_benchmark.py  caption_length_study.py  compare.py  compare_embedding_models.py  fix_embedding_dimensions.py  quantization_accuracy.py  qwen3_vl_poc.py  run_ablation.py  run_all_caption_sweeps.sh  run_all_embedding_sweeps.sh  run_all_sweeps.sh  run_embedding_comparison.sh  sweep_caption_fill_modes.sh  sweep_caption_hidden_layer.sh  sweep_caption_lengths.sh  sweep_caption_vl.sh  sweep_early_layer_bias.sh  sweep_embedding_generation.sh  sweep_embedding_instructions.sh  sweep_embedding_layers.sh  sweep_hidden_layer.sh  sweep_hidden_layer_blend.sh  sweep_hidden_layer_cfg.sh  sweep_hidden_layer_deep.sh  sweep_long_prompt.sh  sweep_middle_layers.sh  sweep_shift_steps.sh  sweep_think_block.sh  test_embedding_generation.py  test_layer_and_masking.py  test_length_vs_semantics.py  test_padding_normalization.py  (+5 more)
experiments/compare/: __init__.py  diff.py  discovery.py  grid.py  models.py
experiments/docs/: caption_study_run_guide.md
experiments/fmtt/: __init__.py  differentiable_siglip.py  poc.py
experiments/metrics/: __init__.py  image_reward.py  siglip_score.py
experiments/prompts/: __init__.py  standard_prompts.yaml
experiments/qwen3_vl/: AGENTS.md  NEXT_STEPS.md  README.md  __init__.py
experiments/qwen3_vl/docs/: caption_studies.md  projector_training_guide.md  style_transfer_findings.md  vl_caption_alignment.md  vl_thinking_comparison.md
experiments/qwen3_vl/scripts/: blend_and_generate.py  check_template.py  compare_embedding_stats.py  debug_stats.py  extract_embeddings.py  generate_style_refs.py  grid_utils.py  run_comparison.py  sanity_check.py  sweep_caption_alignment.py  sweep_vl_thinking.sh  test_adain.py  test_all_blend_modes.py  test_blend_methods.py  test_bridge_approaches.py  test_bridge_v2.py  test_conditioning_strength.py  test_edit_prompts.py  test_layers_and_normalization.py  test_no_scaling.py  test_style_delta.py  test_style_prompts.py  test_style_transfer_correct.py  test_vl_img2img.py  test_vl_img2img_styles.py  validate_infrastructure.py  verify_tokens.py  vl_caption_embedding_test.py
experiments/research/: OVERVIEW.md  ablation_studies.md  assumptions_to_challenge.md  diffusers_rope_bug.md  future_directions.md  metrics_and_data.md  open_questions.md  outlier_dimension_396.md  rope_beyond_resolution.md
experiments/results/shift_sweep/: shift_sweep_summary.csv  shift_sweep_summary.json
experiments/results/steps_only/: steps_only_summary.csv  steps_only_summary.json
experiments/scripts/: README_DYPE_TESTING.md  decompose_recompose.py  layer_remix.py  sweep_dype_params.sh  test_caption_lengths.py  test_dype.py
experiments/siglip/: README.md  diffusers_pr_12857_breakdown.md  findings.md  siglip_encoder.py  sweep_bagel_connector.py  sweep_bagel_v2.py  test_bagel_connector.py  test_bagel_generation.py  test_full_omni_generation.py  test_omni_pipeline.py  test_siglip_encoding.py
experiments/viewer/: __init__.py  index.html  server.py
experiments/viewer/static/: viewer.css  viewer.js
scripts/: convert_image_encoders.py  embeddings.py  generate.py  profile.py  profiler.py  smoke_test.py  start-server.sh  stop-server.sh  train.py
src/llm_dit/: __init__.py  cli.py  config.py  startup.py
src/llm_dit/backends/: __init__.py  api.py  config.py  protocol.py  qwen_image.py  transformers.py
src/llm_dit/constants/: __init__.py
src/llm_dit/conversation/: __init__.py  formatter.py  types.py
src/llm_dit/embedding/: __init__.py  (+1 more)
templates/z_image/: 3d_render_octane.md  3d_render_stylized.md  80s_dark_fantasy.md  90s_cgi_nostalgia.md  abstract_liquid_metal.md  afrofuturism.md  akashic_records.md  alien_tourist.md  analog_polaroid.md  analogue_horror.md  anime_ghibli.md  anime_modern.md  architecture_gothic_revival.md  architecture_historic.md  architecture_modern.md  arctic_exploration.md  art_anime.md  art_baroque.md  art_critic_crisis.md  art_cubism.md  art_deco.md  art_nouveau.md  art_oil.md  art_pointillism.md  art_student_confident.md  artistic.md  atompunk.md  backrooms_level0.md  banana_duck_hybrid.md  bauhaus.md  biblical_angel_accurate.md  bilingual_text.md  biopunk.md  blue_hour.md  blueprint.md  bob_ross_metal.md  boring_movie_poster.md  bread_architecture.md  brutalist.md  cabbage_baby_portrait.md  (+211 more)
tests/: README.md  __init__.py  conftest.py  test_qwen3_think_tokens.py  test_rewriter_parsing.py  test_web_server.py
tests/e2e/: test_pipeline.py
tests/integration/: conftest.py  test_backends.py  test_cli.py  test_import.py  test_qwen_diffusers_wrapper.py  test_qwen_image_decompose.py  test_qwen_official.py  test_web_server.py
tests/unit/: test_config.py  test_conversation.py  test_dry_config.py  test_dype.py  test_embedding_cache.py  test_long_prompt.py  test_lora_manager.py  test_pytorch_components.py  test_qwen_image.py  test_qwen_image_edit_2511.py  test_templates.py
web/: index.html  server.py
(+81 files in other folders)
