[project]
name = "llm-dit-experiments"
version = "0.1.0"
description = "LLM-DiT experimentation platform with pluggable backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    # Z-Image-Turbo requires diffusers 0.36+ with ZImagePipeline
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "transformers>=4.40.0",
    "accelerate",
    "safetensors",
    "pillow",
    "pyyaml",
    "tomli; python_version < '3.11'",  # TOML config support
    "bitsandbytes; sys_platform != 'darwin'",  # 8-bit quantization (Linux/CUDA only)
    "httpx",  # API backend support
    "uvicorn>=0.38.0",
    "fastapi>=0.123.4",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
    "pytest",
    "ruff",
]
analysis = [
    "matplotlib",
    "seaborn",
    "scikit-learn",  # For t-SNE, clustering
    "umap-learn",
]
# Note: vllm and sglang require CUDA, will be added back when needed
# vllm = ["vllm"]
# sglang = ["sglang"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_dit"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long handled by formatter
